@@ -1,4 +1,5 @@
 Development
+    Start work on MPRIS dbus interface http://specifications.freedesktop.org/mpris-spec/latest/
 	Change controlid logic
     Do not run mencoder when being called by plugin
     Monitor sub visiblity better gnome-mplayer Issue #615, requires gmtk SVN r112 or higher to work correctly
